force-app/main/default/objects/Packages__c/Packages__c.object-meta.xml
<CustomObject>
    <description>All the important details of the packages</description>
    <label>Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>