force-app/main/default/objects/Packages__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Duration of stay of the pilgrim</description>
    <inlineHelpText>Duration of stay</inlineHelpText>
    <label>Days:</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>