force-app/main/default/objects/Packages__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Fill the departure date of the pilgrim</description>
    <label>Departure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>