force-app/main/default/objects/Packages__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note:</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>