force-app/main/default/objects/Packages__c/fields/Package_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Package_Inclusion__c</fullName>
    <description>All the Details of the Package</description>
    <inlineHelpText>What is Included In the particular package.</inlineHelpText>
    <label>Package Inclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>