force-app/main/default/objects/Packages__c/fields/Rates__c.field-meta.xml
<CustomField>
    <fullName>Rates__c</fullName>
    <label>Rates:</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>