force-app/main/default/objects/Packages__c/listViews/First_Packages.listView-meta.xml
<ListView>
    <fullName>First_Packages</fullName>
    <filterScope>Queue</filterScope>
    <label>First</label>
    <queue>First</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>